--- a/.classpath
+++ b/.classpath
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="weka/src/main/java"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="weka/lib/java-cup.jar"/>
-	<classpathentry kind="lib" path="weka/lib/packageManager.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="lib" path="weka/lib/arpack_combined.jar"/>
+	<classpathentry kind="lib" path="weka/lib/bounce.jar"/>
+	<classpathentry kind="lib" path="weka/lib/commons-compress-1.18.jar"/>
+	<classpathentry kind="lib" path="weka/lib/core.jar"/>
+	<classpathentry kind="lib" path="weka/lib/jclipboardhelper-0.1.2.jar"/>
+	<classpathentry kind="lib" path="weka/lib/jfilechooser-bookmarks-0.1.6.jar"/>
+	<classpathentry kind="lib" path="weka/lib/JFlex.jar"/>
+	<classpathentry kind="lib" path="weka/lib/junit.jar"/>
+	<classpathentry kind="lib" path="weka/lib/mtj.jar"/>
 	<classpathentry kind="output" path="weka/build/classes"/>
 </classpath>
