Isaac: Adding libs to classpath.

--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,99 @@
 	<classpathentry kind="lib" path="weka/lib/JFlex.jar"/>
 	<classpathentry kind="lib" path="weka/lib/junit.jar"/>
 	<classpathentry kind="lib" path="weka/lib/mtj.jar"/>
+	<classpathentry kind="lib" path="weka/lib/activation-1.0.1.jar"/>
+	<classpathentry kind="lib" path="weka/lib/boon-0.35.jar"/>
+	<classpathentry kind="lib" path="weka/lib/clojure-1.5.1.jar"/>
+	<classpathentry kind="lib" path="weka/lib/clojure-utils-0.2.3.jar"/>
+	<classpathentry kind="lib" path="weka/lib/commons-codec-1.3.jar"/>
+	<classpathentry kind="lib" path="weka/lib/commons-io-1.3.2.jar"/>
+	<classpathentry kind="lib" path="weka/lib/commons-lang3-3.9.jar"/>
+	<classpathentry kind="lib" path="weka/lib/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="weka/lib/commons-math4-20190423.jar"/>
+	<classpathentry kind="lib" path="weka/lib/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="weka/lib/figtree.jar"/>
+	<classpathentry kind="lib" path="weka/lib/geronimo-stax-api_1.0_spec-1.0.jar"/>
+	<classpathentry kind="lib" path="weka/lib/gluegen-rt-natives-linux-amd64.jar"/>
+	<classpathentry kind="lib" path="weka/lib/gluegen-rt-natives-windows-amd64.jar"/>
+	<classpathentry kind="lib" path="weka/lib/gluegen.jar"/>
+	<classpathentry kind="lib" path="weka/lib/groovy-2.5.5.jar"/>
+	<classpathentry kind="lib" path="weka/lib/groovy-ant-2.5.5.jar"/>
+	<classpathentry kind="lib" path="weka/lib/groovy-cli-commons-2.5.5.jar"/>
+	<classpathentry kind="lib" path="weka/lib/groovy-cli-picocli-2.5.5.jar"/>
+	<classpathentry kind="lib" path="weka/lib/groovy-console-2.5.5.jar"/>
+	<classpathentry kind="lib" path="weka/lib/groovy-datetime-2.5.5.jar"/>
+	<classpathentry kind="lib" path="weka/lib/groovy-docgenerator-2.5.5.jar"/>
+	<classpathentry kind="lib" path="weka/lib/groovy-groovydoc-2.5.5.jar"/>
+	<classpathentry kind="lib" path="weka/lib/groovy-groovysh-2.5.5.jar"/>
+	<classpathentry kind="lib" path="weka/lib/groovy-jmx-2.5.5.jar"/>
+	<classpathentry kind="lib" path="weka/lib/groovy-json-2.5.5.jar"/>
+	<classpathentry kind="lib" path="weka/lib/groovy-jsr223-2.5.5.jar"/>
+	<classpathentry kind="lib" path="weka/lib/groovy-macro-2.5.5.jar"/>
+	<classpathentry kind="lib" path="weka/lib/groovy-nio-2.5.5.jar"/>
+	<classpathentry kind="lib" path="weka/lib/groovy-servlet-2.5.5.jar"/>
+	<classpathentry kind="lib" path="weka/lib/groovy-sql-2.5.5.jar"/>
+	<classpathentry kind="lib" path="weka/lib/groovy-swing-2.5.5.jar"/>
+	<classpathentry kind="lib" path="weka/lib/groovy-templates-2.5.5.jar"/>
+	<classpathentry kind="lib" path="weka/lib/groovy-test-2.5.5.jar"/>
+	<classpathentry kind="lib" path="weka/lib/groovy-test-junit5-2.5.5.jar"/>
+	<classpathentry kind="lib" path="weka/lib/groovy-testng-2.5.5.jar"/>
+	<classpathentry kind="lib" path="weka/lib/groovy-xml-2.5.5.jar"/>
+	<classpathentry kind="lib" path="weka/lib/groovy.jar"/>
+	<classpathentry kind="lib" path="weka/lib/hadoop-core-1.2.1.jar"/>
+	<classpathentry kind="lib" path="weka/lib/httpclient-3.1.0.jar"/>
+	<classpathentry kind="lib" path="weka/lib/j3dcore.jar"/>
+	<classpathentry kind="lib" path="weka/lib/j3dutils.jar"/>
+	<classpathentry kind="lib" path="weka/lib/javafx.graphics.jar"/>
+	<classpathentry kind="lib" path="weka/lib/javagd-0.6.1.jar"/>
+	<classpathentry kind="lib" path="weka/lib/jaxb-api-2.4.0-b180830.0359.jar"/>
+	<classpathentry kind="lib" path="weka/lib/jcalendar-1.4.jar"/>
+	<classpathentry kind="lib" path="weka/lib/jetty-6.1.5.jar"/>
+	<classpathentry kind="lib" path="weka/lib/jetty-util-7.0.0.pre5.jar"/>
+	<classpathentry kind="lib" path="weka/lib/jfreechart-1.5.0.jar"/>
+	<classpathentry kind="lib" path="weka/lib/jgoodies-common-1.2.0.jar"/>
+	<classpathentry kind="lib" path="weka/lib/jgoodies-looks-2.4.1.jar"/>
+	<classpathentry kind="lib" path="weka/lib/jmathplot.jar"/>
+	<classpathentry kind="lib" path="weka/lib/jna-platform.jar"/>
+	<classpathentry kind="lib" path="weka/lib/jna.jar"/>
+	<classpathentry kind="lib" path="weka/lib/jniloader-1.1.jar"/>
+	<classpathentry kind="lib" path="weka/lib/jogl-all-natives-linux-amd64.jar"/>
+	<classpathentry kind="lib" path="weka/lib/jogl-all-natives-windows-amd64.jar"/>
+	<classpathentry kind="lib" path="weka/lib/jogl-all.jar"/>
+	<classpathentry kind="lib" path="weka/lib/jOpenDocument.jar"/>
+	<classpathentry kind="lib" path="weka/lib/JRI.jar"/>
+	<classpathentry kind="lib" path="weka/lib/JRIEngine.jar"/>
+	<classpathentry kind="lib" path="weka/lib/jsyntaxpane-0.9.5-b29.jar"/>
+	<classpathentry kind="lib" path="weka/lib/jython.jar"/>
+	<classpathentry kind="lib" path="weka/lib/kxml2-min-2.3.0.jar"/>
+	<classpathentry kind="lib" path="weka/lib/liblinear-java-1.96-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="weka/lib/libsvm.jar"/>
+	<classpathentry kind="lib" path="weka/lib/LibSVMpkg.jar"/>
+	<classpathentry kind="lib" path="weka/lib/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="weka/lib/mail-1.4.jar"/>
+	<classpathentry kind="lib" path="weka/lib/moa.jar"/>
+	<classpathentry kind="lib" path="weka/lib/native_ref-java-1.1.jar"/>
+	<classpathentry kind="lib" path="weka/lib/native_system-java-1.1.jar"/>
+	<classpathentry kind="lib" path="weka/lib/opencsv-2.4.jar"/>
+	<classpathentry kind="lib" path="weka/lib/poi-3.8-20120326.jar"/>
+	<classpathentry kind="lib" path="weka/lib/poi-ooxml-3.8-20120326.jar"/>
+	<classpathentry kind="lib" path="weka/lib/poi-ooxml-schemas-3.8-20120326.jar"/>
+	<classpathentry kind="lib" path="weka/lib/prefuse.jar"/>
+	<classpathentry kind="lib" path="weka/lib/REngine.jar"/>
+	<classpathentry kind="lib" path="weka/lib/rJavaClassLoader.zip"/>
+	<classpathentry kind="lib" path="weka/lib/scala-reflect-2.11.0.jar"/>
+	<classpathentry kind="lib" path="weka/lib/servlet-api-2.5-6.1.14.jar"/>
+	<classpathentry kind="lib" path="weka/lib/snowball.jar"/>
+	<classpathentry kind="lib" path="weka/lib/spark-catalyst_2.12-2.4.2.jar"/>
+	<classpathentry kind="lib" path="weka/lib/spark-core_2.12-2.4.2.jar"/>
+	<classpathentry kind="lib" path="weka/lib/spark-csv_2.10-1.5.0.jar"/>
+	<classpathentry kind="lib" path="weka/lib/spark-mllib_2.12-2.4.2.jar"/>
+	<classpathentry kind="lib" path="weka/lib/spark-sql_2.12-2.4.2.jar"/>
+	<classpathentry kind="lib" path="weka/lib/t-digest-3.2.jar"/>
+	<classpathentry kind="lib" path="weka/lib/tigerjython2.jar"/>
+	<classpathentry kind="lib" path="weka/lib/vecmath.jar"/>
+	<classpathentry kind="lib" path="weka/lib/xmlbeans-2.3.0.jar"/>
+	<classpathentry kind="lib" path="weka/lib/xmlpull-1.1.3.1.jar"/>
+	<classpathentry kind="lib" path="weka/lib/xpp3_min-1.1.4c.jar"/>
+	<classpathentry kind="lib" path="weka/lib/xstream-1.4.10.jar"/>
 	<classpathentry kind="output" path="weka/build/classes"/>
 </classpath>
