--- a/.classpath
+++ b/.classpath
@@ -107,5 +107,6 @@
 	<classpathentry kind="lib" path="weka/lib/xmlpull-1.1.3.1.jar"/>
 	<classpathentry kind="lib" path="weka/lib/xpp3_min-1.1.4c.jar"/>
 	<classpathentry kind="lib" path="weka/lib/xstream-1.4.10.jar"/>
+	<classpathentry kind="lib" path="weka/lib/jfxrt.jar"/>
 	<classpathentry kind="output" path="weka/build/classes"/>
 </classpath>
