Isaac: Add Weka packages are compiled, not just core.

--- a/.classpath
+++ b/.classpath
@@ -1,9 +1,132 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="weka/src/main/java"/>
 	<classpathentry kind="src" path="weka/resources"/>
+	<classpathentry kind="src" path="weka/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/associationRulesVisualizer/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/averagedOneDependenceEstimators/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/bayesianLogisticRegression/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/cascadeKMeans/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/citationKNN/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/classifierErrors/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/CLOPE/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/decorate/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/DilcaDistance/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/fastCorrBasedFS/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/elasticNet/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/EMImputation/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/ensembleLibrary/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/functionalTrees/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/fuzzyUnorderedRuleInduction/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/generalizedSequentialPatterns/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/hiddenNaiveBayes/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/J48graft/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/kfGroovy/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/kfKettle/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/kfPMMLClassifierScoring/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/latentSemanticAnalysis/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/lazyBayesianRules/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/levenshteinEditDistance/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/LibLINEAR/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/LibSVM/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/linearForwardSelection/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/multilayerPerceptronCS/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/NNge/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/normalize/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/optics_dbScan/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/ordinalLearningMethod/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/prefuseGraph/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/prefuseGraphViewer/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/prefuseTree/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/probabilisticSignificanceAE/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/rotationForest/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/scatterPlot3D/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/SMOTE/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/snowball-stemmers/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/stackingC/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/tabuAndScatterSearch/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/tertius/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/winnow/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/fuzzyLaticeReasoning/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/ordinalStochasticDominance/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/classAssociationRules/src/main/java"/>
+	<classpathentry kind="src" path="packages/external/DMNBtext/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/predictiveApriori/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/alternatingDecisionTrees/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/alternatingModelTrees/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/attributeSelectionSearchMethods/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/bestFirstTree/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/calibrationCurve/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/chiSquaredAttributeEval/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/classificationViaClustering/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/clojureClassifier/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/denormalize/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/discriminantAnalysis/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/distributedWekaBase/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/distributedWekaHadoopCore/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/distributedWekaSpark2Dev/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/DTNB/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/dualPerturbAndCombine/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/ensemblesOfNestedDichotomies/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/extraTrees/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/filteredAttributeSelection/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/grading/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/gridSearch/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/hotSpot/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/hyperPipes/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/isolationForest/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/isotonicRegression/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/iterativeAbsoluteErrorRegression/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/kernelLogisticRegression/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/largeScaleKernelLearning/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/leastMedSquared/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/localOutlierFactor/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/logarithmicErrorMetrics/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/massiveOnlineAnalysis/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/metaCost/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/multiBoostAB/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/multiInstanceFilters/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/multiInstanceLearning/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/multiLayerPerceptrons/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/naiveBayesTree/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/newKnowledgeFlowStepExamples/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/niftiLoader/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/oneClassClassifier/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/ordinalClassClassifier/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/paceRegression/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/partialLeastSquares/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/percentageErrorMetrics/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/probabilityCalibrationTrees/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/racedIncrementalLogitBoost/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/raceSearch/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/RBFNetwork/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/realAdaBoost/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/ridor/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/scriptingClassifiers/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/sequentialInformationalBottleneckClusterer/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/simpleCART/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/simpleEducationalLearningSchemes/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/SPegasos/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/streamingUnivariateStats/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/supervisedAttributeScaling/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/SVMAttributeEval/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/thresholdSelector/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/timeSeriesFilters/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/timeseriesForecasting/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/userClassifier/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/votingFeatureIntervals/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/wavelet/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/wekaPython/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/wekaServer/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/XMeans/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/RPlugin/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/WekaExcel/src/main/java"/>
+	<classpathentry kind="src" path="packages/internal/WekaODF/src/main/java"/>
 	<classpathentry kind="lib" path="weka/lib/java-cup.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<accessrules>
+			<accessrule kind="accessible" pattern="com/sun/**"/>
+		</accessrules>
+	</classpathentry>
 	<classpathentry kind="lib" path="weka/lib/arpack_combined.jar"/>
 	<classpathentry kind="lib" path="weka/lib/bounce.jar"/>
 	<classpathentry kind="lib" path="weka/lib/commons-compress-1.18.jar"/>
