Isaac: Adding wekaPython.

--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="weka/resources"/>
+	<classpathentry kind="src" path="packages/internal/wekaPython/resources/py"/>
 	<classpathentry kind="src" path="weka/src/main/java"/>
 	<classpathentry kind="src" path="packages/external/associationRulesVisualizer/src/main/java"/>
 	<classpathentry kind="src" path="packages/external/averagedOneDependenceEstimators/src/main/java"/>
